Fixes
- Issue with loading tiles have been fixed by adding async/await on startup.
- Hide pwa install dialog in standalone mode
- Align tile with section title, now the first delete tile icon does not overflows out of window on the left.
- Tile which loads apps and height was not specified remained collapsed.
- Background image for tiles did not load when running in pwa mode.

--- a/artifacts/Application/planet9_launchpad_standard/css.css
+++ b/artifacts/Application/planet9_launchpad_standard/css.css
@@ -4285,6 +4285,9 @@ html[dir=rtl] body.resizing {
 }
 
 /* to take remove card item out of flex flow */
+.nepBlockLayoutTileRow {
+    margin-left: 1rem;
+}
 .lp-is-customizable .nepBlockLayoutTileRow:not(.favorite-cards) .nepFCardContainer > .sapMFlexItem:first-of-type {
     display: none;
     position: absolute;
